# az-serializable

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
az/: AutoSerializable.h  JsonSerializer.h  Serializable.h  SerializationErrors.h  Serializer.h  TypedSerializer.h  Validator.h
az/json/: JsonSerializer.h
examples/: AutoSerializableExample.cpp  UsageExample.cpp  ValidatorExample.cpp
headers/: JsonSerializer.h  Serializable.h  SerializationErrors.h
tests/: ContainerExample.cpp  SimpleTypesExample.cpp  SimpleTypesTest.cpp  UsageExample.cpp
